# StereoNet_PyTorch

./: .gitignore  .pylintrc  README.md  StereoNet.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
hydra_conf/: config.example.yaml  config.yaml.example  training_paths.example.txt  training_paths.txt.example  validation_paths.example.txt
readme_images/: questions.md
src/: inference.py  model.py  train.py  utils.py  utils_io.py
src/stereonet/: datasets.py  inference.py  model.py  stereonet_types.py  train.py  transforms.py  types.py  types_hydra.py  types_stereonet.py  utils.py  utils_hydra_typing.py  utils_io.py
tests/: conftest.py  test_model.py
