[metadata]
name = stereonet
description = PyTorch Lightning implementation of StereoNet
author = Andrew Stewart
license = The Unlicense
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    
[options]
packages =
    stereonet
install_requires =
    pytorch_lightning>=1.4.6
    torchvision>=0.10.0
    scikit_image>=0.18.3
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 240