[metadata]
name = stereonet
description = PyTorch Lightning implementation of StereoNet
author = Andrew Stewart
license = The Unlicense
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    
[options]
packages =
    stereonet
install_requires =
    torch>=2.0.0
    torchvision>=0.15.1
    pytorch_lightning>=2.0.1
    scikit_image>=0.20.0
    hydra-core>=1.3.2
    opencv-python>=4.7.0.72
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.2
    pytest-cov>=4.0.0
    mypy>=1.1.1
    flake8>=6.0.0
    tox>=4.4.8

[options.package_data]
stereonet = py.typed

[flake8]
max-line-length = 240